[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "itavema-utils"
version = "0.1.0"
description = "Utilitarios para automacao de dealers Itavema"
requires-python = ">=3.10"
dependencies = [
    "rpaflow",
]

[tool.setuptools.packages.find]
include = ["itavema_utils*"]